Leo EB, EBS, Virgo EB updates
updated Leo AP2, AP3
updated Virgo AP1 EB colours

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 /[Ss]creenshots/
-/[Uu]serSettings/
+/[Uu]ser[Ss]ettings/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -55,7 +55,9 @@ sysinfo.txt
 
 # Builds
 *.apk
+*.aab
 *.unitypackage
+*.app
 
 # Crashlytics generated file
 crashlytics-build.properties
